[package]
name = "babyrite"
version = "0.13.12"
edition = "2021"
license = "MIT"
repository = "https://github.com/m1sk9/babyrite"

[dependencies]
anyhow = { version = "1.0.82" }
dotenvy = { version = "0.15.7" }
envy = { version = "0.4.2" }
once_cell = { version = "1.19.0" }
regex = { version = "1.10.4" }
tracing = { version = "0.1.40" }
thiserror = { version = "2.0.0" }
url = { version = "2.5.2" }
toml = { version = "0.8.19" }

[dependencies.serenity]
version = "0.12.1"
features = ["client", "gateway", "model", "cache", "rustls_backend"]
default-features = false

[dependencies.serde]
version = "1.0.200"
features = ["derive"]

[dependencies.tokio]
version = "1.37.0"
features = ["macros", "rt-multi-thread"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter", "json"]

[dependencies.moka]
version = "0.12.8"
features = ["future"]
