[package]
name = "babyrite"
version = "0.18.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/m1sk9/babyrite"
readme = "README.md"
description = "A citation message Discord bot."

[dependencies]
anyhow = "1.0.82"
dotenvy = "0.15.7"
envy = "0.4.2"
moka = { version = "0.12.8", features = ["future"] }
once_cell = "1.19.0"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }
thiserror = "2.0.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
typed-builder = "0.22.0"
url = "2.5.2"
